@@ -22,6 +22,18 @@
 
 <configuration>
 
+<!-- general properties  -->
+
+<property>
+  <name>store.ip.address</name>
+  <value>false</value>
+  <description>Enables us to capture the specific IP address 
+  (InetSocketAddress) of the host which we connect to via 
+  the given protocol. Currently supported is protocol-ftp & 
+  http.
+  </description>
+</property>
+
 <!-- file properties -->
 
 <property>
